--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,9 @@ concurrency:
   group: 'pages'
   cancel-in-progress: true
 
+env:
+  VITE_DB_URL: ${{ secrets.VITE_DB_URL }}
+  VITE_DB_API_KEY: ${{ secrets.VITE_DB_API_KEY }}
 jobs:
   # Single deploy job since we're just deploying
   deploy:
